Closed Bug 1806140 Opened 2 years ago Closed 2 years ago

Missing italic for macOS system font on Webkit blog

Categories

(Core :: Graphics: Text, defect)

All
macOS
defect

Tracking

()

VERIFIED FIXED
110 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox108 --- wontfix
firefox109 --- wontfix
firefox110 --- verified
firefox111 --- verified

People

(Reporter: mstange, Assigned: jfkthame)

References

Details

Attachments

(1 file)

Steps to reproduce:

  1. On macOS, go to https://webkit.org/blog/13607/help-choose-from-options-for-css-nesting-syntax/
  2. Search for the text "and only Option 3"
  3. Look at that text.

Expected results:
The text in brackets should be italicized.

Actual results:
The text is not italic, just a bit thinner than the rest.

I'm on arm64 Mac OS 13.0.1.

Flags: needinfo?(jfkthame)

Also reproduces for me on Intel macOS 12.x.

This page sets font-synthesis: none on the root element. That's why we don't synthetic-slant the font. But wait.... there should be an actual italic face of the .SFNS system font. So apparently we're failing to handle that properly as part of the -apple-system family.

I guess this has probably been broken for some time, but we haven't noticed because normally synthetic-oblique steps in, and nobody notices the difference.

Flags: needinfo?(jfkthame)

This sounds like S3. Please change if I'm wrong.

Severity: -- → S3
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e7bad90843c6 Handle the italic face of the macOS system font. r=gfx-reviewers,jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch

The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox109 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jfkthame)

This is not a recent regression, and affects only a particular edge case in a minor way: I don't think it justifies uplift.

Flags: needinfo?(jfkthame)
Summary: Missing synthetic italic for macOS system font on Webkit blog → Missing italic for macOS system font on Webkit blog
Regressions: 1806844
Regressions: 1806851
QA Whiteboard: [qa-110b-p2]

Reproduced on a 2022-12-16 on macOS 12.
Verified as fixed on Firefox 110.0b8(build ID: 20230131190033) and Nightly 111.0a1(build ID: 20230202091542) on macOS 12.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-110b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: