Bug 1806140 - Handle the italic face of the macOS system font. r=gfx-reviewers,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D164970